# utilidades

./: CMakeLists.txt
cmake/: FindOpenBLAS.cmake
src/: utilidades.f90
